[FIX] <pro>CheckBox: Fixed the style on IE11

--- a/components-pro/check-box/style/index.less
+++ b/components-pro/check-box/style/index.less
@@ -17,6 +17,7 @@
     background-color: #fff;
     border: @checkbox-border-width @border-style-base @checkbox-border-color;
     border-radius: @border-radius-sm;
+    border-collapse: separate;
     transition: border-color 90ms cubic-bezier(0, 0, 0.2, 0.1),
       background-color 90ms cubic-bezier(0, 0, 0.2, 0.1);
 
